--- a/app/assets/stylesheets/idea_center.css.scss
+++ b/app/assets/stylesheets/idea_center.css.scss
@@ -62,6 +62,14 @@
   /* width:40%; */
 }
 
+.text_window.halfway{
+  width: 32em;
+}
+
+.text_window.fullway{
+  width: 72em;
+}
+
 .staff_pick_text{
   width:50%;
 }
